--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Transaction History</h1>
   <h1>Chat History</h1>
+  <h1>Feature 1 added</h1>
   <app-root></app-root>
 </body>
 </html>
