Update index.html added feature 2

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <h1>Transaction History</h1>
   <h1>Chat History</h1>
   <h1>Feature 1 added</h1>
+  <h1>Feature 2 added</h1>
   <app-root></app-root>
 </body>
 </html>
