Update index.html-Develpor-2's feature added

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <h1>Feature 1 added</h1>
   <h1>Feature 2 added</h1>
   <h1>Developer-1's Feature Added</h1>
+  <h1>Developer-2's Feature Added</h1>
   <app-root></app-root>
 </body>
 </html>
