--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <h1>Developer-1's Feature Added</h1>
   <h1>Developer-2's Feature Added</h1>
   <h1>Dev-1's Feature Added</h1>
+  <h1>Dev-2's Feature Added</h1>
   <app-root></app-root>
 </body>
 </html>
